# parquet-writer

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  README.rst
.github/workflows/: check-format.yml  ci.yml
bash/: set-homebrew-arrow  set-homebrew-arrow.sh
cmake/: FindArrow.cmake  FindParquet.cmake  FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  building.rst  conf.py  examples.rst  file_metadata.rst  index.rst  intro.rst  list_types.rst  misc.rst  requirements.txt  struct_list_types.rst  struct_types.rst  structs_with_structlists.rst  structs_with_structs.rst  value_types.rst
examples/cpp/: CMakeLists.txt  basic_example.cpp  struct_buffer_example.cpp  struct_example.cpp  struct_map_example.cpp
exts/: CMakeLists.txt
src/cpp/: CMakeLists.txt  logging.cpp  logging.h  parquet_helpers.cpp  parquet_helpers.h  parquet_writer.cpp  parquet_writer.h  parquet_writer_exceptions.cpp  parquet_writer_exceptions.h  parquet_writer_fill_types.cpp  parquet_writer_fill_types.h  parquet_writer_helpers.cpp  parquet_writer_helpers.h  parquet_writer_types.h  parquet_writer_visitor.h
src/cpp/tools/: CMakeLists.txt  test_writer.cpp
src/python/: dump-metadata.py
